--- a/examples/templates/home.html
+++ b/examples/templates/home.html
@@ -1,12 +1,5 @@
-
-function matcher() {
-    var elem = arguments[0];
-    var args = JSON.parse(arguments[1]);
-    var match = 0;
-    if(args[0] == args[1]) {
-        match = 1;        
-    }
-    
-    return match;
-    
-}
+<html>
+<body>
+<b>Hello World !</b>
+</body>
+</html>
