provision for schemaname

--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -76,7 +76,7 @@ server generates a user_id and assigns a user to a channel</p>
 
 <p><a href="https://res.cloudinary.com/practicaldev/image/fetch/s--VWDgv8eO--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://thepracticaldev.s3.amazonaws.com/i/ssjjmqrys3uw545q2fnx.png"><img alt="Distributed Quarks" src="https://res.cloudinary.com/practicaldev/image/fetch/s--VWDgv8eO--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://thepracticaldev.s3.amazonaws.com/i/ssjjmqrys3uw545q2fnx.png" /></a></p>
 
-<p>Basically, the idea is having a lot of light weight easily drop-able servers (calling them Quarks Cores) and an adequate balancing server (planning to name it Higgs Server). Once the Higgs is running, the cores would be able to talk to each other and fetch a lot of results very fast!</p>
+<p>Basically, the idea is having a lot of light weight easily drop-able servers (calling them Quarks Cores) and an adequate balancing server (planning to name it Boson). Once the Boson is running, the cores would be able to talk to each other and fetch a lot of results very fast!</p>
 
 <p>So, how does the fetchMessages for a multi-core system look like? Not too much different from what you saw in Step-3. fetchMessages invoke a find query on Quarks.</p>
 
