--- a/examples/templates/feed.html
+++ b/examples/templates/feed.html
@@ -173,6 +173,175 @@ body {
 </script>
 
 
+<style>
+.js-modal {
+  /* Take the box out of the flow, so that it could look like a modal box */
+  position: absolute;
+
+  /* Avoid the awkwardly stretchy box on bigger screens */
+  max-width: 450px;
+
+  /* Aligning it to the absolute center of the page */
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top-margin: -100px;	
+  /* Some cosmetics */
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .1);
+}
+
+.js-modal-hidden {
+  display: none;
+}
+
+/* Make the media inside the box adapt the width of the parent */
+.js-modal img,
+.js-modal iframe,
+.js-modal video {
+  max-width: 100%;
+}
+
+/* Make the inner element relatively-positioned to contain the close button */
+.js-modal-inner {
+  position: relative;
+  padding: 10px;
+}
+
+/* Close button */
+.js-modal-close {
+  font-size: 10px;
+
+  /* Take it out of the flow, and align to the top-left corner */
+  position: absolute;
+  top: -10px;
+  right: -10px;
+
+  /* Size it up */
+  width: 24px;
+  height: 24px;
+
+  /* Text-alignment */
+  text-align: center;
+
+  /* Cosmetics */
+  color: #eee;
+  border-width: 0;
+  border-radius: 100%;
+  background-color: black;
+}
+</style>
+
+<script>
+
+var qurl = "http://localhost:18080/";
+
+function getJson(url, callback){
+	var xmlhtpp = new XMLHttpRequest();
+  	xmlhtpp.onreadystatechange = function() {
+    	if (this.readyState == 4) {
+      		callback(this.responseText, this.status);
+    	}
+  	};
+  
+  	xmlhtpp.open("GET", url, true);
+  	xmlhtpp.send();
+}
+
+function postJson(url, data, callback){
+	var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance 
+	xmlhttp.open("POST", url);
+	xmlhttp.setRequestHeader("Content-Type", "application/json");
+	//xmlhttp.withCredentials = true;
+	
+	xmlhttp.onreadystatechange = function () {
+    	if (this.readyState == 4) {
+  			callback(this.responseText, this.status);
+		}
+	};
+	
+	xmlhttp.send(JSON.stringify(data));
+}
+
+
+
+// middle layer apis 
+
+function postComment(username, comment){
+	var d = new Date();
+	var t = d.getTime();
+
+	var r = Math.floor(Math.random() * 100000); 
+
+	var user = "user_" + username;
+	var feedId = "feed_" + user + "_" + t + "_" + r; 
+	
+	
+	var data = {};
+	data.key = feedId;
+	
+	var feeditem = {};;
+	feeditem.comment = comment;
+	data.value = feeditem;
+	
+	console.log(data);
+	
+	postJson(qurl + "putjson", data, function(response, status){
+		console.log("quarks response: " + response);
+		console.log("status: " + status);
+	});
+	
+}
+
+
+
+function modalPost(){
+  	var name = document.getElementById("namebox").value;
+  	var comment = document.getElementById("commentbox").value;
+  	
+  	postComment(name, comment);
+}
+  
+let createModal = (modalContent) => {
+  
+  
+  // Definitions
+  let modal = document.createElement("div"),
+      modalStyle = document.createElement("style"),
+      modalCSS = '.js-modal{ position: absolute; top: 15%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0, 0, 0, .1); max-width: 650px; border-radius: 5px; } .js-modal img, .js-modal iframe, .js-modal video{ max-width: 100%; } .js-modal-inner{ position: relative; padding: 10px; } .js-modal-close{ position: absolute; top: -10px; right: -10px; background-color: black; color: #eee; border-width: 0; font-size: 10px; height: 24px; width: 24px; border-radius: 100%; text-align: center; }',
+      modalClose = '<button id="post" onclick="modalPost()">Post</button><button class="js-modal-close" id="js_modal_close">X</button>',
+      theBody = document.getElementsByTagName('body')[0],
+      theHead = document.getElementsByTagName('head')[0];
+
+  // Add content and attributes to the modal
+  modal.setAttribute("class", "js-modal");
+  modal.innerHTML = '<div class="js-modal-inner">' + modalContent + 
+  						'Type Name: <input id="namebox" />' + '<br/>Comment: <textarea id="commentbox"></textarea> &nbsp;' +  modalClose + '</div>';
+  theBody.appendChild(modal);
+
+  modalClose = document.querySelector("#js_modal_close");
+
+  // Add the modal styles dynamically
+  if(modalStyle.styleSheet){
+      modalStyle.styleSheet.cssText = modalCSS;
+  } else {
+      modalStyle.appendChild(document.createTextNode(modalCSS));
+  }
+  theHead.appendChild(modalStyle);
+
+  // Close the modal on button-click
+  if(modalClose) {
+    modalClose.addEventListener('click', function() {
+      modal.remove();
+      modalStyle.remove();
+    });
+  }
+  
+  
+  
+}
+</script>
+
 </head>
 
 <body translate="no" >
@@ -220,7 +389,8 @@ body {
 		 	<div class="user_avatar">
 		 		<img src="https://s3.amazonaws.com/uifaces/faces/twitter/BillSKenney/73.jpg">
 		 	</div><!-- the input field --><div class="input_comment">
-		 		<input type="text" placeholder="Join the conversation..">
+		 		<input type="text" placeholder="Join the conversation.." 
+				 onclick="createModal('')" />
 		 	</div>
 
 		 </div>
@@ -526,4 +696,5 @@ body {
 
 </html>
  
+
 
